--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,11 @@
 
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 0.925);
   background-color: #1b9eaf;
+  text-align: center;
+  justify-content: center;
+  display: flex;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,6 +35,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
 }
 
 h1 {
