--- a/src/index.css
+++ b/src/index.css
@@ -39,21 +39,22 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 1.2em;
   line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border-radius: 10px;
+  border: 0px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
+  font-weight: 200;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: green;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: initial;
   text-align: left;
+  font-style: italic;
 }
 button:hover {
   border-color: #17dbcb;
