--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
+  transition: filter 00ms;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -39,5 +39,5 @@
 }
 
 .read-the-docs {
-  color: #1db9be;
+  color: #3fdf16;
 }
